--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.1.14",
     "aos": "^2.3.4",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.6.0",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.1.0",
     "react-router-dom": "^7.9.4",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.14"
