--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "helal-aljaberi",
+  "name": "Helal-Aljaberi",
+  "homepage":"https://Haidarahm.github.io/Helal-Aljaberi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
