--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Helal-Aljaberi",
-  "homepage":"https://Haidarahm.github.io/Helal-Aljaberi",
+  "homepage": "https://Haidarahm.github.io/Helal-Aljaberi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,11 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "predeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.14",
     "aos": "^2.3.4",
     "framer-motion": "^12.23.24",
