--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.14",
+    "antd": "^5.27.6",
     "aos": "^2.3.4",
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.0",
